Agregando tag a elementos del carrusel.

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -35,53 +35,62 @@
             "k": 0,
             "title": "Delta Learning",
             "desc": "",
-            "img": "/assets/carousel/deltalearning.png"
+            "img": "/assets/carousel/deltalearning.png",
+            "tag": "#AR"
         },
         {
             "k": 1,
             "title": "Mall Train",
             "desc": "",
-            "img": "/assets/carousel/malltrain.png"
+            "img": "/assets/carousel/malltrain.png",
+            "tag": "#App"
         },
         {
             "k": 2,
             "title": "Pitch VR Simulator",
             "desc": "",
-            "img": "/assets/carousel/vrSs01.png"
+            "img": "/assets/carousel/vrSs01.png",
+            "tag": "#VR"
         },
         
         {
             "k": 4,
             "title": "VR Motorcycle",
             "desc": "",
-            "img": "/assets/carousel/motovr.png"
+            "img": "/assets/carousel/motovr.png",
+            "tag": "#Game"
         },
         {
             "k": 5,
             "title": "Combizona Oro Verde",
             "desc": "",
-            "img": "/assets/carousel/czov.png"
+            "img": "/assets/carousel/czov.png",
+            "tag": "#App"
         },
         {
             "k": 6,
             "title": "Simulator Horror VR",
             "desc": "",
-            "img": "/assets/carousel/simuladorterrorvr.png"
+            "img": "/assets/carousel/simuladorterrorvr.png",
+            "tag": "#RA"
         },{
             "k": 7,
             "title": "Irekani Inmobiliaria Web",
             "desc": "",
-            "img": "/assets/carousel/irekani.png"
+            "img": "/assets/carousel/irekani.png",
+            "tag": "#Web"
         },{
             "k": 8,
             "title": "Combizona Users",
             "desc": "",
-            "img": "/assets/carousel/czusuarios.png"
+            "img": "/assets/carousel/czusuarios.png",
+            "tag": "#App"
         },{
             "k": 9,
             "title": "PekeAnimals",
             "desc": "",
-            "img": "/assets/carousel/pekeanimals.png"
+            "img": "/assets/carousel/pekeanimals.png",
+            "tag": "#AR"
         }
     ],
     "footer01": "Follow Us",
