--- a/public/i18n/es.json
+++ b/public/i18n/es.json
@@ -35,48 +35,48 @@
             "k": 0,
             "title": "Delta Learning",
             "desc": "",
-            "img": "/assets/carousel/deltalearning.png",
+            "img": "/assets/carousel/trabajos-delta.png",
             "tag": "#RA"
         },
         {
             "k": 1,
             "title": "Mall Train",
             "desc": "",
-            "img": "/assets/carousel/malltrain.png",
+            "img": "/assets/carousel/trabajos-malltrain.png",
             "tag": "#App"
         },
         {
             "k": 2,
             "title": "Simulador de Pitch VR",
             "desc": "",
-            "img": "/assets/carousel/vrSs01.png",
+            "img": "/assets/carousel/trabajos-vrsl.png",
             "tag": "#RV"
         },
         {
             "k": 4,
             "title": "Moto VR",
             "desc": "",
-            "img": "/assets/carousel/motovr.png",
+            "img": "/assets/carousel/trabajos-motovr.png",
             "tag": "#Juego"
         },
         {
             "k": 5,
             "title": "Combizona Oro Verde",
             "desc": "",
-            "img": "/assets/carousel/czov.png",
+            "img": "/assets/carousel/trabajos-cz.png",
             "tag": "#App"
         },
         {
             "k": 6,
             "title": "Simulador Terror VR",
             "desc": "",
-            "img": "/assets/carousel/simuladorterrorvr.png",
+            "img": "/assets/carousel/trabajos-terrorvr.png",
             "tag": "#RV"
         },{
             "k": 7,
             "title": "Irekani Inmobiliaria Web",
             "desc": "",
-            "img": "/assets/carousel/irekani.png",
+            "img": "/assets/carousel/trabajos-irekani.png",
             "tag": "#Web"
         },{
             "k": 8,
@@ -89,6 +89,12 @@
             "title": "PekeAnimals",
             "desc": "",
             "img": "/assets/carousel/pekeanimals.png",
+            "tag": "#RA"
+        },{
+            "k": 10,
+            "title": "K&J Construction",
+            "desc": "",
+            "img": "/assets/carousel/trabajos-kandj.png",
             "tag": "#RA"
         }
     ],
