Configurando para que el año se obtenga de forma automática en footer.

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -106,5 +106,5 @@
     ],
     "footer01": "Follow Us",
     "footer02": "Contact Us",
-    "footer03": "Made with ❤️ by Box Collider 2024"
+    "footer03": "Made with ❤️ by Box Collider "
 }
