--- a/public/i18n/es.json
+++ b/public/i18n/es.json
@@ -106,5 +106,5 @@
     ],
     "footer01": "Síguenos",
     "footer02": "Contáctanos",
-    "footer03": "Hecho con ❤️ por Box Collider 2024"
+    "footer03": "Hecho con ❤️ por Box Collider "
 }
